--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Rahul Toms</h1>
-    <img src="../my-passport-photo.jpg" height="200" alt="my profile photo">
+    <img src="./my-passport-photo.jpg" height="200" alt="my profile photo">
     <h2>Professional Summary</h2>
     <hr />
     <p>
